Share asset types and improve asset error handling
